[package]
name = "test_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
axum-macros = "0.3.8"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
